--- a/chats.html
+++ b/chats.html
@@ -42,7 +42,7 @@
               class="user-component__avatar user-component__avatar"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title">Kim</h4>
+              <h4 class="user-component__title">Kim bug</h4>
               <h6 class="user-component__subtitle">
                 Please check My Kakao Account Info
               </h6>
