--- a/more.html
+++ b/more.html
@@ -39,11 +39,11 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="https://img.well-buying.com/files/attach/images/14610/433/113/0c324cd2350af8aeb59cb9a81bb6a380.jpg"
+            src="https://image.fmkorea.com/files/attach/new2/20210507/3842645/48028231/3578582244/0ef13a658988ae31441a2d7e051df40a.jpg"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Kim</h4>
+            <h4 class="user-component__title">Kim bug</h4>
             <div class="phone-number">
               <h6 class="user-component__subtitle">
                 +1 787-493-4219 <i class="fas fa-exclamation-circle fa-sm"></i>
